--- a/wp-content/themes/slant/css/header.css
+++ b/wp-content/themes/slant/css/header.css
@@ -1,42 +1,39 @@
 header {
     width: 100%;
-    height: 20vh;
+    height: 15vh;
 
-    padding-top: 1em;
+    padding: 0 5vw;
 
     background-color: #9FB17C;
     color: #4B3B40;
 
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
 }
 
-#logo {
-    text-decoration: none;
-    color: #4B3B40;
+#logo img {
+    height: 100%;
 }
 
-#header-top-div {
-    width: 100%;
-    height: 60%;
-
-    padding: 0 5vw;
-}
-
-#header-bottom-div {
-    width: 100%;
-    height: 40%;
-
-    padding: 0 5vw;
+#header-left {
+    width: 40%;
+    height: 100%;
 
     display: flex;
     align-items: center;
+    justify-content: flex-start;
 }
 
-.header-top-left-right {
-    width: 50%;
+#header-center {
+    width: 20%;
+    height: 100%;
+}
+#header-right {
+    width: 40%;
+    height: 100%;
+
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
 }
 
 .menu li {
