--- a/wp-content/themes/slant/css/main.css
+++ b/wp-content/themes/slant/css/main.css
@@ -18,3 +18,72 @@ main {
 main h3 {
     padding: 2vh 0;
 }
+
+#divImg {
+    width: 100vw;
+    height: 200px;
+    display: flex;
+    justify-items: center;
+    overflow: hidden;
+}
+
+/* #imgMain {
+    width: 100%;
+    height: 100%;
+} */
+
+h1 {
+    display: flex;
+    justify-content: center;
+    color: #4B3B40;
+}
+
+hr {
+    border: 1px solid #ccc7c9;
+}
+
+/* .popDiv {
+    display: flex;
+    flex-direction: row;
+} */
+
+
+.product_list_widget {
+    margin-top: 20px;
+    display: flex;
+    text-align: center;
+    justify-content: space-between;
+} 
+ 
+
+
+ li {
+   display: flex;
+   flex-direction: column;
+   max-width: 320px;
+} 
+
+/* 
+a:link {
+    color: #4B3B40;
+    font-weight: bold;
+    text-decoration: none;
+    font-size: 20px;
+  }
+  
+  a:visited {
+    text-decoration: none;
+  }
+  
+  a:hover {
+      color: #65724B;
+  }
+  
+  a:active {
+    text-decoration: none;
+  }
+
+  bdi {
+      color: #4B3B40;
+      font-size: 19px;
+  } */
