--- a/wp-content/themes/slant/css/footer.css
+++ b/wp-content/themes/slant/css/footer.css
@@ -3,6 +3,7 @@ footer {
     height: auto;
 
     padding: 2 5vw;
+  
 
     background-color: #9FB17C;
     color: #4B3B40;
@@ -21,14 +22,29 @@ footer {
     width: 100%;
     height: auto;
     padding: 1 5vw;
+    margin-left: 14vw;
 
     background-color: #9FB17C;
     color: #4B3B40;
-
+    font-size: 3.5vw;
     
     align-items: center;
     justify-content: space-around;
 } 
+
+.footerOne H2 {
+    font-size: 5vw;
+}
+
+.footerOne a:link {
+   color: black;
+    
+}
+
+.footerOne a:hover {
+    color: orange;
+    font-size: large;
+}
 
 @media only screen and (min-width: 750px) {
     .footerOne {
@@ -36,6 +52,9 @@ footer {
         height: auto;
 
         padding: 0 5vw;
+        margin-left: 0;
+
+        font-size: 1.2vw;
 
         /* background-color: #9FB17C;
         color: #4B3B40; */
@@ -43,6 +62,10 @@ footer {
         display: flex;
         align-items: center;
         justify-content: space-between;
+    }
+
+    .footerOne H2 {
+        font-size: 2vw;
     }
 
     
