--- a/wp-content/themes/slant/css/main.css
+++ b/wp-content/themes/slant/css/main.css
@@ -9,7 +9,7 @@
 main {
     width: 100%;
     height: auto;
-    padding: 5vh 5vw;
+    margin-top: 30px;
 
     display: flex;
     flex-direction: column;
@@ -38,8 +38,8 @@ h1 {
     color: #4B3B40;
 }
 
-hr {
-    border: 1px solid #ccc7c9;
+ #mainLine {
+    margin-top: 0;
 }
 
 /* .popDiv {
@@ -55,13 +55,16 @@ hr {
     justify-content: space-between;
 } 
  
-
+.carousel-control.right, .carousel-control.left {
+    background-image: none;
+}
 
  li {
    display: flex;
    flex-direction: column;
    max-width: 320px;
 } 
+
 
 /* 
 a:link {
@@ -87,3 +90,5 @@ a:link {
       color: #4B3B40;
       font-size: 19px;
   } */
+
+
