css changes + log
-Added margin: 0 to the 'product categories menu' (#woocommerce_product_categories-2 in shop.css). It had an unwanted margin to the right.
-Removed margin-top in main.css. To get the 'product categories menu' directly under the header
-Updated my log

--- a/wp-content/themes/slant/css/shop.css
+++ b/wp-content/themes/slant/css/shop.css
@@ -1,5 +1,6 @@
-li#woocommerce_product_categories-2 {
+#woocommerce_product_categories-2 {
     max-width: unset;
+    margin: 0;
 }
 
 ul.product-categories {
