--- a/wp-content/themes/slant/css/shop.css
+++ b/wp-content/themes/slant/css/shop.css
@@ -17,3 +17,30 @@ ul.product-categories {
 ul.product-categories a {
     color: #4B3B40;
 }
+
+#outer-container {
+    display: flex;
+    justify-content: center;
+}
+
+#inner-container {
+    display: flex;
+    flex-wrap: wrap;
+
+    /* width: 90%; */
+}
+
+.woocommerce-products-header {
+    display: flex;
+    align-items: center;
+
+    margin-top: 1vh;
+}
+
+
+@media only screen and (max-width: 950px) {
+
+
+
+
+}
