--- a/wp-content/themes/slant/css/main.css
+++ b/wp-content/themes/slant/css/main.css
@@ -41,28 +41,33 @@ h1 {
     margin-top: 0;
 }
 
-/* .popDiv {
+/*  .popDiv {
+    width: 100%;
+    height: auto;
     display: flex;
-    flex-direction: row;
-} */
+    flex-direction: column;
+    overflow-wrap: ;
+}  */
 
 
-.product_list_widget {
+.product_list_widget ul{
     margin-top: 20px;
     display: flex;
     text-align: center;
-    justify-content: space-between;
+    flex-direction: row;
+    max-width: 320px;
 } 
  
 .carousel-control.right, .carousel-control.left {
     background-image: none;
 }
 
- li {
+ /* li {
    display: flex;
    flex-direction: column;
    max-width: 320px;
-} 
+   flex-wrap: wrap;
+}  */
 
 
 /* 
@@ -96,30 +101,5 @@ a:link {
     flex-direction: row;
 } */
 
-/* Single-Products */
-.product{
-    width:100%;
-    background-color: aquamarine;
-    display: flex;
-    flex-direction:row;
-    flex-wrap: wrap;
-}
-.summary.entry-summary{
-    background-color: cyan;
-
-}
-.single_add_to_cart_button{
-    padding:10px 16px 10px 16px;
-    background-color:#65724B;
-    border-radius: 10px;
-
-}
-.single_add_to_cart_button:focus{
-    background-color:#9caf76 ;
-}
-.amount{
-    color:#4B3B40;
-    font-size: 2em;
-}
 
 
