--- a/wp-content/themes/slant/css/header.css
+++ b/wp-content/themes/slant/css/header.css
@@ -1,4 +1,5 @@
-header {
+/* header */
+#desktop {
     width: 100%;
     height: 15vh;
 
@@ -10,8 +11,8 @@ header {
     display: flex;
 }
 
-#logo img {
-    height: 100%;
+#logo {
+    height: 15vh;
 }
 
 #header-left {
@@ -26,6 +27,9 @@ header {
 #header-center {
     width: 20%;
     height: 100%;
+
+    display: flex;
+    align-items: center;
 }
 #header-right {
     width: 40%;
@@ -50,36 +54,71 @@ header {
 
 /* MOBILE */
 
+/* header */
 #mobile {
     display:  none;
+
+    width: 100%;
+    height: auto;
+    min-height: 15vh;
+    padding: 0 5vw;
+
+    background-color: #9FB17C;
+    color: #4B3B40;
 }
 
 #mobile-header-left {
-    width: 40%;
-    height: 100%;
+    width: 50%;
+    min-height: 15vh;
 
     display: flex;
     align-items: center;
 }
 
-#mobile #logo img {
-    height: 90px;
-}
-
 #mobile-header-right {
-    width: 60%;
-    height: 100%;
+    width: 50%;
+    min-height: 15vh;
+
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
 }
 
-@media only screen and (max-width: 700px) {
+#logo-mobile {
+    height: 100%;
+    padding-top: 1.5vh;
+}
+#logo-mobile img{
+    height: 12vh;
+}
+
+#mobile .menu-item {
+    display: flex;
+    flex-direction: column;
+
+    padding: 2vh 0;
+}
+
+.navbar {
+    margin-bottom: 0 !important;
+}
+
+@media only screen and (max-width: 800px) {
     #desktop {
         display:  none; 
     }
     
     #mobile {
         display:  flex;
+
     }
 
+}
+
+@media only screen and (max-width: 1024px) {
+    #logo {
+        height: 12vh;
+    }
 }
 
 
