--- a/wp-content/themes/slant/css/single-post.css
+++ b/wp-content/themes/slant/css/single-post.css
@@ -11,12 +11,8 @@
     flex-direction: column;
 }
 
-.bloggTitleDiv {
-    margin-top: -50px;
-}
-
 .postContainer {
-    display: flex;
+    /* display: flex; */
 }
 
 .singlePost {
@@ -30,6 +26,8 @@ article {
     padding: 30px;
     max-width: 100%;
     margin: 20px;
+    Padding:0px;
+    margin:0px;
 }
 
 article img {
@@ -63,7 +61,7 @@ article img {
 
 
 li {
-    margin-right: 5px;
+    /* margin-right: 5px; */
     color: black;
 }
 
@@ -100,7 +98,6 @@ li {
     #singleBlogg {
         width: 100%;
         height: auto;
-    
         display: flex;
         flex-direction: column;
     }
@@ -112,11 +109,10 @@ li {
     article {
         background-color: #9DB17C;
         width: 100%;
-        padding: 30px;
+        padding: 0px;
         max-width: 100%;
-        margin: 20px;
+        margin: 0px;
     }
-    
-  
+      
     
     }
