--- a/wp-content/themes/slant/css/main.css
+++ b/wp-content/themes/slant/css/main.css
@@ -62,6 +62,10 @@ h1 {
     background-image: none;
 }
 
+.container {
+    padding: 0;
+}
+
  /* li {
    display: flex;
    flex-direction: column;
