--- a/wp-content/themes/slant/css/shop.css
+++ b/wp-content/themes/slant/css/shop.css
@@ -17,32 +17,13 @@ ul.select2-results__options {
     color: #4B3B40;
 }
 
-/*
-ul.product-categories {
-    width: 100%;
-    height: 5vh;
-    background-color: #C4C4C4;
-
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-
+ul.products {
+    list-style: none;
 }
 
-ul.product-categories a {
-    color: #4B3B40;
+#woocommerce_product_categories-2 {
+    list-style: none;
 }
-
-.cat-parent .children{
-    position: absolute;
-    display: none;
-}
-
-.cat-parent:hover .children{
-    position: absolute;
-    display: block;
-}
- */
 
 /* Div(#outer-container) that contains div(#inner-container).Purpose is to center div(#inner-container) */
 #outer-container {
