--- a/wp-content/themes/slant/css/shop.css
+++ b/wp-content/themes/slant/css/shop.css
@@ -17,10 +17,23 @@ ul.select2-results__options {
     color: #4B3B40;
 }
 
+/* product card / the li-elemtent that contains product image/name/price/add to cart */
+li.type-product {
+    max-width: 300px;
+    margin: 0 10px;
+}
+
+/* removes dots infront of li-element */
 ul.products {
     list-style: none;
 }
 
+/* removes dots infront of li-element */
+ul.page-numbers {
+    list-style: none;
+}
+
+/* removes dots infront of li-element */
 #woocommerce_product_categories-2 {
     list-style: none;
 }
@@ -53,7 +66,7 @@ ul.products {
     flex-wrap: wrap;
     justify-content: space-evenly;
 
-    margin-top: 2vh;
+    margin-top: 3vh;
 }
 
 #pagination-div {
