--- a/wp-content/themes/slant/style.css
+++ b/wp-content/themes/slant/style.css
@@ -5,12 +5,7 @@ Version: 1.0
 */
 
 * {
-    margin: 0;
-    padding: 0;
+   /*  margin: 0;
+    padding: 0; */
     box-sizing: border-box;
-}
-
-.wc-block-grid__product{
-    border:0px;
-
 }
