--- a/wp-content/themes/slant/css/single-product.css
+++ b/wp-content/themes/slant/css/single-product.css
@@ -1,11 +1,11 @@
 /* Single-Products */
-
 .superdiv{
-    display:flex;
+    margin:auto;
+    width:70%;
     justify-content: center;
+    display:flex;
     flex-direction: column;
 }
-
 .wp-post{
     width:25%;
     display:flex;
@@ -18,14 +18,23 @@
 
 }
 
-
-.product, .woocommerce-breadcrumb{
+nav.woocommerce-breadcrumb{
     max-width:90%;
     margin:0px 0px 0px 10px;
     display: flex;
     align-self: center;
     justify-content:center;
     flex-direction:row;
+    flex-wrap:wrap;
+}
+
+.product{
+    max-width:90%;
+    margin:0px 0px 0px 10px;
+    display: flex;
+    align-self: center;
+    justify-content:center;
+    flex-direction:column;
     flex-wrap:wrap;
 }
 .product_title, .entry-title{
@@ -49,6 +58,17 @@ div.product, div.summary{
 }
 .cart{
     justify-content: space-evenly;
+}
+
+#pa_storlek{
+    width:100%;
+    padding:10px 16px 10px 16px;
+    background-color: #C7C3C3;
+}
+.reset_variations{
+    font-size: medium;
+    color:#4B3B40;
+    font-weight: bold;
 }
 .single_add_to_cart_button{
     width:200px;
@@ -135,8 +155,8 @@ h2{
     height:100%;
     display: flex;
     flex-wrap: wrap;
-    flex-direction: row;
-    justify-content:flex-start;
+    flex-direction:row;
+    justify-content:space-around;
 }
 
 
@@ -168,3 +188,12 @@ h2{
     display:flex;
     flex-direction: row;
 }
+
+
+@media ( max-width: 667px ) {
+
+    .superdiv{
+        width:100%;
+    }
+      
+    }
