--- a/wp-content/themes/slant/css/single-post.css
+++ b/wp-content/themes/slant/css/single-post.css
@@ -10,9 +10,9 @@
     flex-direction: column;
 }
 
-.postContainer {
-    /* display: flex; */
-}
+/* .postContainer {
+    display: flex;
+} */
 
 .singlePost {
     display: flex;
