--- a/wp-content/themes/slant/css/header.css
+++ b/wp-content/themes/slant/css/header.css
@@ -30,6 +30,7 @@
 
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 #header-right {
     width: 40%;
@@ -43,6 +44,10 @@
 .menu li {
     display: inline;
     padding: 0 2vw 0 0;
+}
+
+ul.menu {
+    display: flex;
 }
 
 .menu a {
@@ -110,12 +115,15 @@
 
 @media only screen and (max-width: 800px) {
     #desktop {
-        display:  none; 
+        display: none; 
     }
     
     #mobile {
-        display:  flex;
+        display: flex;
+    }
 
+    #menu-mobilmeny {
+        display: block; 
     }
 
 }
